test/tests/stages/18_structures/valid/no_structure_parameters/libraries/return_struct_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[267]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  struct
  identifier(inner)
  {
  double
  identifier(d)
  ;
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(outer)
  {
  char
  identifier(a)
  ;
  char
  identifier(b)
  ;
  struct
  identifier(inner)
  identifier(substruct)
  ;
  }
  ;
  struct
  identifier(outermost)
  {
  int
  identifier(i)
  ;
  struct
  identifier(outer)
  *
  identifier(nested_ptr)
  ;
  struct
  identifier(outer)
  identifier(nested_struct)
  ;
  }
  ;
  struct
  identifier(inner)
  *
  identifier(make_struct_inner)
  (
  int
  identifier(seed)
  )
  ;
  struct
  identifier(outer)
  *
  identifier(make_struct_outer)
  (
  int
  identifier(seed)
  )
  ;
  struct
  identifier(outermost)
  *
  identifier(make_struct_outermost)
  (
  int
  identifier(seed)
  )
  ;
  struct
  identifier(inner)
  *
  identifier(make_struct_inner)
  (
  int
  identifier(seed)
  )
  {
  struct
  identifier(inner)
  *
  identifier(ptr)
  =
  identifier(malloc)
  (
  sizeof
  (
  struct
  identifier(inner)
  )
  )
  ;
  identifier(ptr)
  ->
  identifier(d)
  =
  identifier(seed)
  ;
  identifier(ptr)
  ->
  identifier(i)
  =
  identifier(seed)
  ;
  return
  identifier(ptr)
  ;
  }
  struct
  identifier(outer)
  *
  identifier(make_struct_outer)
  (
  int
  identifier(seed)
  )
  {
  struct
  identifier(outer)
  *
  identifier(ptr)
  =
  identifier(malloc)
  (
  sizeof
  (
  struct
  identifier(outer)
  )
  )
  ;
  identifier(ptr)
  ->
  identifier(a)
  =
  identifier(seed)
  ;
  identifier(ptr)
  ->
  identifier(b)
  =
  identifier(seed)
  +
  const int(1)
  ;
  identifier(ptr)
  ->
  identifier(substruct)
  .
  identifier(d)
  =
  identifier(seed)
  +
  const int(2)
  ;
  identifier(ptr)
  ->
  identifier(substruct)
  .
  identifier(i)
  =
  identifier(seed)
  +
  const int(3)
  ;
  return
  identifier(ptr)
  ;
  }
  struct
  identifier(outermost)
  *
  identifier(make_struct_outermost)
  (
  int
  identifier(seed)
  )
  {
  struct
  identifier(outermost)
  *
  identifier(ptr)
  =
  identifier(malloc)
  (
  sizeof
  (
  struct
  identifier(outermost)
  )
  )
  ;
  identifier(ptr)
  ->
  identifier(i)
  =
  identifier(seed)
  ;
  identifier(ptr)
  ->
  identifier(nested_ptr)
  =
  identifier(make_struct_outer)
  (
  identifier(seed)
  +
  const int(1)
  )
  ;
  identifier(ptr)
  ->
  identifier(nested_struct)
  .
  identifier(a)
  =
  identifier(seed)
  +
  const int(5)
  ;
  identifier(ptr)
  ->
  identifier(nested_struct)
  .
  identifier(b)
  =
  identifier(seed)
  +
  const int(6)
  ;
  identifier(ptr)
  ->
  identifier(nested_struct)
  .
  identifier(substruct)
  .
  identifier(d)
  =
  identifier(seed)
  +
  const int(7)
  ;
  identifier(ptr)
  ->
  identifier(nested_struct)
  .
  identifier(substruct)
  .
  identifier(i)
  =
  identifier(seed)
  +
  const int(8)
  ;
  return
  identifier(ptr)
  ;
  }
