test/tests/stages/18_structures/invalid_types/initializers/nested_static_compound_initializer_too_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  struct
  identifier(inner)
  {
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(outer)
  {
  struct
  identifier(inner)
  identifier(foo)
  ;
  }
  ;
  struct
  identifier(outer)
  identifier(x)
  =
  {
  {
  const int(1)
  ,
  const int(2)
  }
  }
  ;
